--- a/index.html
+++ b/index.html
@@ -89,12 +89,81 @@
 					<h1>ORAJON SELLER</h1>
 					</div>
 					<div class="video-img">
-						<img src="image/7563ee966897d1a0c1c2b92d5e23fee8.jpg" alt="ad.png">
+						<img src="image/7563ee966897d1a0c1c2b92d5e23fee8.jpg" alt="7563ee966897d1a0c1c2b92d5e23fee8.jpg">
 					</div>
 				</div>
 			</div>
 			<div class="grid-item-video"><iframe width="100%" height="450" src="https://www.youtube.com/embed/TcMBFSGVi1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+		</div>
+	</div>
+</section>
+<!---seller-details-->
+<section class="seller-details">
+	<div class="container">
+		<div class="seller-details-main">
+			<div class="seller-img">
+				<img src="image/9c081444f942cc8fe0ddf55631b584e2.jpg" alt="9c081444f942cc8fe0ddf55631b584e2.jpg">
+			</div>
+			<div class="seller-text-details">
+				<div >
+				<h2>Tim Shao, Managing Director,Realme Bangladesh.</h2>
+				<h3>Exclusive Launches and Exciting Deals</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima molestias architecto, quis labore neque atque deserunt voluptas nisi id tempore veniam itaque quisquam a, saepe expedita exercitationem unde cumque vitae quibusdam dicta vel voluptatum libero quidem. Vel expedita commodi tenetur quibusdam? Nemo et, nobis rem veritatis illum dolor deserunt ut facere alias enim autem repellat quo aspernatur omnis, aliquam vitae?</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+
+
+
+
+<!--********asked-question************-->
+<section class="asked-question">
+	<div class="container">
+		<div class="asked-title">
+			<h1>FREQUENTLY ASKED QUESTIONS</h1>
+		</div>
+		<div class="question">
+			<div class="question-text">
+				<h2>1. Do you tell me about orajon in detail?</h2>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+					been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+					galley of type and scrambled it to make a type specimen book</p>
+			</div>
+			<div class="question-text">
+				<h2>2. Do you tell me about orajon in detail?</h2>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+					been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+					galley of type and scrambled it to make a type specimen book</p>
+			</div>
+			<div class="question-text">
+				<h2>3. Do you tell me about orajon in detail?</h2>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+					been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+					galley of type and scrambled it to make a type specimen book</p>
+			</div>
+			<div class="question-text">
+				<h2>4. Do you tell me about orajon in detail?</h2>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+					been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+					galley of type and scrambled it to make a type specimen book</p>
+			</div>
+			<div class="question-text">
+				<h2>5. Do you tell me about orajon in detail?</h2>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+					been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+					galley of type and scrambled it to make a type specimen book</p>
+			</div>
+			<div class="question-text">
+				<h2>6. Do you tell me about orajon in detail?</h2>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+					been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+					galley of type and scrambled it to make a type specimen book</p>
+			</div>
 		</div>
 	</div>
 </section>
