--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 		</div>
 		<div class="sell-step-img">
 			<div class="img1">
-			<a href="#" target="_blank"><img src="image/item1.png" alt=""></a>
+			<a href="#" target="_blank"><img src="image/item1.png" alt="item1.png"></a>
 			</div>
 			<div class="img2">
-				<a href="#" target="_blank"><img src="image/item2.png" alt=""></a>
+				<a href="#" target="_blank"><img src="image/item2.png" alt="item2.png"></a>
 			</div>
 			<div class="img3">
-				<a href="#" target="_blank"><img src="image/item3.png" alt=""></a>
+				<a href="#" target="_blank"><img src="image/item3.png" alt="item3.png"></a>
 			</div>
 
 		</div>
